<resources>
    <string name="app_name">WTGM?</string>
    <string name="stringTitle">Where To Get Materials?</string>
    <string name="stringButtonChooseMaterials">Choose Material</string>
    <string name="stringButtonLoginOrRegister">Login or Register</string>
    <string name="stringTitleChooseMaterial">Click Button To Jump To…</string>
    <string name="stringTitleLogin">Login</string>
    <string name="stringTitleRegister">Register</string>
    <string name="stringTitleSupport">About</string>
    <string name="stringTitleSetting">Settings</string>
    <string name="stringTitleUserInfo">My Office</string>
    <string name="title_submit">Submit</string>
    <string name="textJumpToRegisterPage">Don´t have account yet? Register now ›</string>
    <string name="stringHintUsername">Input Username…</string>
    <string name="stringHintPassword">Input Password…</string>
    <string name="stringLicense">Accept license for this application?</string>
    <string name="stringAutoRegister">Tip: You will auto register when you click Login Button if you doesn`t register before.</string>
    <string name="stringLicenseSorry">Sorry, You must accepted our license :3</string>
    <string name="material_icon">Material Icon</string>
    <string name="star_this_material">Star This Material</string>
    <string name="loading_stages_list">Loading states list…\nI need a few time at first load.</string>
    <string name="loading_starred_list">Loading mark list…</string>
    <string name="empty_starred_list">Oh no… You haven`t mark any materials. Orz</string>
    <string name="setting_title_auto_save">The data will auto save.</string>
    <string name="setting_button_about_this_app">About This Application</string>
    <string name="spinner_title_language">Switch language</string>
    <string name="spinner_title_server">Switch server</string>
    <string name="spinner_server_cn">China Server [CN]</string>
    <string name="spinner_server_us">United States Server [US]</string>
    <string name="spinner_server_jp">Japan Server [JP]</string>
    <string name="spinner_server_kr">Korea Server [KR]</string>
    <string name="hint_input_username">Input Username…</string>
    <string name="hint_input_password">Input Password…</string>
    <string name="hint_input_password_again">Input Password Again…</string>
    <string name="loading_stages_list_title">Now is loading No.1, all of …</string>
    <string name="title_welcome_back">Welcome back,&#160;</string>
    <string name="title_dr">Dr.&#160;</string>
    <string name="title_id_posait">ID:&#160;</string>
    <string name="title_delete">Delete</string>
    <string name="title_logout">Logout</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_change_username">Change Username</string>
    <string name="title_go_to_stage">go to</string>
    <string name="title_best_stage_prob">is the best stage:&#160;</string>
    <string name="title_percentage">%</string>
    <string name="title_prob_rate">Rate:&#160;</string>
    <string name="title_sanity_index">&#160;// Sanity Index:&#160;</string>
    <string name="toast_username_cannot_empty">Username cannot be empty.</string>
    <string name="toast_password_cannot_empty">Password cannot be empty</string>
    <string name="toast_user_is_unregistered">This user unregistered.</string>
    <string name="toast_wrong_password">Password verification failed.</string>
    <string name="toast_check_password_is_the_same">Please confirm the password is the same.</string>
    <string name="toast_user_was_registered">This user already registered.</string>
    <string name="toast_user_register_failed">User register failed, please try again later.</string>
    <string name="toast_register_succeed">Register succeed.</string>
    <string name="toast_already_logout">Logged out.</string>
    <string name="toast_not_login">Not login, please login first.</string>
    <string name="title_twice_confirm">Twice Confirm</string>
    <string name="title_confirm_to_logout">Are you sure to logout?</string>
    <string name="title_confirm">Of course!</string>
    <string name="title_cancel">Nah…</string>
    <string name="title_material_prob_start">Material&#160;</string>
    <string name="title_material_prob_end">`s Prob Rate</string>
    <string name="title_get_stages_failed">Get Stages List Failed.</string>
    <string name="title_now_is_get_1">Now is getting No.</string>
    <string name="title_now_is_get_2">, All of&#160;</string>
    <string name="title_now_is_get_3">&#160;.</string>
    <string name="title_max_can_mark_7_materials">Max can mark 7 materials.</string>
    <string name="toast_is_marked">Marked</string>
    <string name="toast_is_cancel_marked">Cancel marked</string>
    <string name="input_something_here">Input something here…</string>
    <string name="title_change_username_edit">Change Username:</string>
    <string name="title_change_password_edit">Change Password:</string>
    <string name="title_delete_account_edit">Are you sure to delete your account?\nInput password to verification:</string>
    <string name="title_material_id">Material ID:&#160;</string>
    <string name="toast_input_something">Input what you want to change please.</string>
    <string name="toast_change_failed">Change failed.</string>
    <string name="toast_account_deleted">Account is already deleted.</string>
    <string name="toast_change_succeed_as_restart">Change succeed, please re-login.</string>
    <string name="toast_change_succeed_as_new_password">Change succeed, please use new password to login.</string>
    <string name="title_left_slash_double">//</string>
    <string name="title_stage_info_code">Code</string>
    <string name="title_stage_info_id">Id</string>
    <string name="title_stage_info_danger_level">Danger Level</string>
    <string name="title_stage_info_exp_gain">Get Exp</string>
    <string name="title_stage_info_point">points</string>
    <string name="title_stage_info_ap_cost">Need Sanity</string>
    <string name="title_stage_info_ap_fail_return">Fail Return Sanity</string>
    <string name="title_stage_info_description">Description</string>
    <string name="title_back_to_my_office">Back to my Office</string>
    <string name="content_material_30011">content_material_30011</string>
    <string name="content_material_30012">content_material_30012</string>
    <string name="content_material_30013">content_material_30013</string>
    <string name="content_material_30014">content_material_30014</string>
    <string name="content_material_30021">content_material_30021</string>
    <string name="content_material_30022">content_material_30022</string>
    <string name="content_material_30023">content_material_30023</string>
    <string name="content_material_30024">content_material_30024</string>
    <string name="content_material_30031">content_material_30031</string>
    <string name="content_material_30032">content_material_30032</string>
    <string name="content_material_30033">content_material_30033</string>
    <string name="content_material_30034">content_material_30034</string>
    <string name="content_material_30041">content_material_30041</string>
    <string name="content_material_30042">content_material_30042</string>
    <string name="content_material_30043">content_material_30043</string>
    <string name="content_material_30044">content_material_30044</string>
    <string name="content_material_30051">content_material_30051</string>
    <string name="content_material_30052">content_material_30052</string>
    <string name="content_material_30053">content_material_30053</string>
    <string name="content_material_30054">content_material_30054</string>
    <string name="content_material_30061">content_material_30061</string>
    <string name="content_material_30062">content_material_30062</string>
    <string name="content_material_30063">content_material_30063</string>
    <string name="content_material_30064">content_material_30064</string>
    <string name="content_material_30073">content_material_30073</string>
    <string name="content_material_30074">content_material_30074</string>
    <string name="content_material_31034">content_material_31034</string>
    <string name="content_material_31033">content_material_31033</string>
    <string name="content_material_31024">content_material_31024</string>
    <string name="content_material_31023">content_material_31023</string>
    <string name="content_material_31014">content_material_31014</string>
    <string name="content_material_31013">content_material_31013</string>
    <string name="content_material_30104">content_material_30104</string>
    <string name="content_material_30103">content_material_30103</string>
    <string name="content_material_30094">content_material_30094</string>
    <string name="content_material_30093">content_material_30093</string>
    <string name="content_material_30084">content_material_30084</string>
    <string name="content_material_30083">content_material_30083</string>
</resources>