<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/viewEditUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_input_username"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="@string/hint_input_username"
        android:inputType="text" />

    <EditText
        android:id="@+id/viewEditPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_input_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewEditUsername"
        android:autofillHints="@string/hint_input_password" />

    <EditText
        android:id="@+id/viewEditConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_input_password_again"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewEditPassword"
        android:autofillHints="@string/hint_input_password_again" />

    <CheckBox
        android:id="@+id/viewCheckboxLicense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="onClickLicense"
        android:text="@string/stringLicense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewEditConfirmPassword" />

    <Button
        android:id="@+id/viewButtonRegister"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/stringTitleRegister"
        android:onClick="onClickRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewCheckboxLicense" />

    <TextView
        android:id="@+id/viewTextLicenseSorry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stringLicenseSorry"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewButtonRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>